# hand-isomorphism

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py  hand-isomorphism-config.cmake.in
include/hand-isomorphism/: deck.h  hand_index.h  inline.h
src/: CMakeLists.txt  hand_index.c  utils.h
tests/: CMakeLists.txt  main.c
